fix review remarqs